# eclipx

./: .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/zk_prover/: Cargo.toml
crates/zk_prover/src/: circuit.rs  commitment.rs  lib.rs
docs/: architecture.md  disclosure-types.md  sp1-integration.md
examples/: simple_proof.ts  whale_gating.ts
libs/eclipx_math/: Cargo.toml
libs/eclipx_math/src/: lib.rs
programs/eclipx_core/: Cargo.toml
programs/eclipx_core/src/: compression.rs  contexts.rs  errors.rs  lib.rs  relay.rs  state.rs
programs/fixr_core/src/: lib.rs
programs/fixr_core/src/instructions/: generate_proof.rs  init.rs  verify_proof.rs
scripts/: deploy.sh  verify_proof.sh
sdk/: jest.config.js  package.json  tsconfig.json
sdk/src/: disclosure.ts  index.ts  prover.ts  solana.ts  types.ts
sdk/tests/: integration.test.ts  prover.test.ts
tests/: eclipx.test.ts
