[workspace]
resolver = "2"
members = [
    "programs/eclipx_core",
    "libs/eclipx_math",
    "cli",
]

[workspace.package]
version = "0.4.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/eclipxlabs/eclipx"

# touch: c92bde2b

# touch: 4f2e9202

# touch: 81170763

# touch: 658edf70
