[package]
name = "eclipx-cli"
version = "0.4.2"
edition = "2021"
description = "CLI tool for managing eclipx relay nodes"

[[bin]]
name = "eclipx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "~1.18"
solana-client = "~1.18"
tokio = { version = "1.35", features = ["full"] }

# touch: 2d9008e8
