[package]
name = "zk_prover"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "zk_prover"

[dependencies]
sha2 = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
