[package]
name = "eclipx-core"
version = "0.4.2"
edition = "2021"
description = "On-chain ZK-state compression program for eclipx"

[lib]
crate-type = ["cdylib", "lib"]
name = "eclipx_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
bytemuck = { version = "1.14", features = ["derive"] }

# touch: 22e424e9

# touch: 13686742

# touch: 0ae55c8a

# touch: 90e8d9ef

# touch: 16d28c9f

# touch: baa74231

# touch: 0c55bf46

# touch: 106179fa

# touch: f0eab6d4

# touch: 191a24c8

# touch: b6924e54
